/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

2025-04-22 15:30 UTC+0200 Wilfried Brunken DF7BE 
* samples/testtray.prg
  ! Bugfix on LINUX compile:
  ! Warning W0003  Variable 'OTRAYMENU' and 'OICON2' ...
  ! Compile all sample in one run
  ! hbmk2 *.hbp 
  ! runs OK.

2025-04-22 09:00 UTC-0300 Jose Quntas jmcquintas-gmail.com
   * samples/demomonthcal.prg
     ! from vertical to horizontal
   * samples/demotab.hbp
   * samples/demotab.prg
      ! tab inside tab
   * samples/democheckbox.prg
     ! multiuse
   * clean.sh
   * samples/readme.txt
   * samples/clean.sh
   * samples/demoall.*
   * demobrowsedbf.prg
   * samples/demodatepicker.prg
   * samples/demomenumt.prg
   * samples/makeallsam.sh
     ! small changes: position, color

2025-04-21 17:00 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * source/winapi/hbrowse
     ! only comment from testado.prg to demobrowseado.prg
   * samples/Readme.txt
   * samples/clean.sh
   * samples/demoall.* (from all.*)
   - samples/demoado.hbp
   * samples/demobrowseado.prg (from testado.prg)
   * samples/demobrowsedbf.prg
   * samples/demomenumt.*
   * samples/demomonthcal.prg
   * samples/demotab.*
   * samples/makeallsam.sh
     ! change demobrowseado to multiuse, use friendly variable names
     ! Update references
     ! change all.prg to demoall.prg - to easy search, and do not
     !    confuse with all sources.
     ! demobrowseado added as windows only on demoall and demotab

2025-04-21 13:10 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * samples/Readme.txt
   * samples/all.hbp
   * samples/all.prg
   * samples/demobrowsedbf.prg
   - samples/demomonthcal.hbp
   * samples/demomonthcal.prg
   * samples/demotab.hbp